fix identitashoes.it => identitashoes.com

--- a/src/app/core/components/home-three-images/home-three-images.component.html
+++ b/src/app/core/components/home-three-images/home-three-images.component.html
@@ -21,13 +21,13 @@
   <div class="row">
     <div class="col-12 d-flex flex-wrap">
       <div class="col-lg-4 one-of-three">
-        <img src="https://app.identitashoes.it/tel/IMGHOMEBORSE.jpg" alt="" class="img-fluid" [routerLink]="'/products/bags'">
+        <img src="https://app.identitashoes.com/tel/IMGHOMEBORSE.jpg" alt="" class="img-fluid" [routerLink]="'/products/bags'">
       </div>
       <div class="col-lg-4 one-of-three">
-        <img src="https://app.identitashoes.it/tel/IMGHOMESTIVALETTI.jpg" alt="" class="img-fluid" [routerLink]="'/products/pumps'">
+        <img src="https://app.identitashoes.com/tel/IMGHOMESTIVALETTI.jpg" alt="" class="img-fluid" [routerLink]="'/products/pumps'">
       </div>
       <div class="col-lg-4 one-of-three">
-        <img src="https://app.identitashoes.it/tel/IMGHOMENA.jpg" alt="" class="img-fluid" [routerLink]="'/products'">
+        <img src="https://app.identitashoes.com/tel/IMGHOMENA.jpg" alt="" class="img-fluid" [routerLink]="'/products/sandals'">
       </div>
     </div>
   </div>
