--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -59,7 +59,7 @@
       style="cursor: pointer;"
     >
       <img
-        src="https://identitashoes.it/shop.png"
+        src="https://identitashoes.com/shop.png"
         alt=""
         class="img-fluid position-relative cart-image"
         style="height: 25px;"
@@ -85,4 +85,4 @@
     </div>
   </div>
 </div>
-<!--https://identitashoes.it/shop.png-->
+<!--https://identitashoes.com/shop.png-->
