--- a/src/app/core/components/home-four-images/home-four-images.component.html
+++ b/src/app/core/components/home-four-images/home-four-images.component.html
@@ -87,7 +87,7 @@
     </div>
     <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/bags'">
       <img
-        src="https://identitashoes.it/4imghome/3.jpg"
+        src="https://identitashoes.com/4imghome/3.jpg"
         alt=""
         class="img-fluid position-relative one-four-image"
         [routerLink]="'/products'"
