--- a/src/app/core/components/order-form/order-form.component.html
+++ b/src/app/core/components/order-form/order-form.component.html
@@ -39,6 +39,12 @@
         </div>
       </div>
       <div class="d-flex flex-wrap">
+        <div class="col-lg-6 flex-grow-1">
+          <mat-form-field appearance="outline" class="example-full-width">
+            <mat-label>Grad</mat-label>
+            <input formControlName="city" matInput placeholder="Grad" />
+          </mat-form-field>
+        </div>
         <div class="col-lg-6 flex-grow-1 d-flex">
           <div class="col-9 p-0 pr-3">
             <mat-form-field appearance="outline" class="example-full-width">
@@ -53,7 +59,9 @@
             </mat-form-field>
           </div>
         </div>
-        <div class="col-lg-6 flex-grow-1">
+      </div>
+      <div class="d-flex flex-wrap">
+        <div class="col-lg-12">
           <mat-form-field appearance="outline" class="example-full-width">
             <mat-label>Napomena</mat-label>
             <input formControlName="note" matInput placeholder="Napomena" />
