[translate] * translated home , initial lang is 'sr'

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -2,25 +2,25 @@
   <div class="col-12 d-flex flex-wrap footer-content">
 
     <div class="col-md-3 col-sm-6">
-      <p [routerLink]="'/products/all'"><b>NAŠA PONUDA</b></p>
-      <p [routerLink]="'/products/pumps'">CIPELE</p>
-      <p [routerLink]="'/products/sandals'">SANDALE</p>
-      <p [routerLink]="'/products/boots'">ČIZME</p>
-      <p [routerLink]="'/products/bags'">TORBE</p>
+      <p [routerLink]="'/products/all'"><b>{{"FOOTER.ourShop" | translate}}</b></p>
+      <p [routerLink]="'/products/pumps'">{{"FOOTER.shoes" | translate}}</p>
+      <p [routerLink]="'/products/sandals'">{{"FOOTER.sandals" | translate}}</p>
+      <p [routerLink]="'/products/boots'">{{"FOOTER.boots" | translate}}</p>
+      <p [routerLink]="'/products/bags'">{{"FOOTER.bags" | translate}}</p>
     </div>
     <div class="col-md-3 col-sm-6">
       <p><b>LA PISTA</b></p>
-      <p [routerLink]="'/about'">O NAMA</p>
-      <p [routerLink]="'/contact'">KONTAKT</p>
-      <p>PRIVATNOST</p>
-      <p>COOKIE</p>
+      <p [routerLink]="'/about'">{{"FOOTER.about" | translate}}</p>
+      <p [routerLink]="'/contact'">{{"FOOTER.contact" | translate}}</p>
+      <p>{{"FOOTER.privacy" | translate}}</p>
+      <p>{{"FOOTER.cookies" | translate}}</p>
     </div>
     <div class="col-md-3 col-sm-6">
-      <p><b>KORISNIČKA PODRŠKA</b></p>
-      <p>POMOĆ</p>
+      <p><b>{{"FOOTER.support" | translate}}</b></p>
+      <p>{{"FOOTER.help" | translate}}</p>
     </div>
     <div class="col-md-3 col-sm-6 d-flex flex-column">
-      <p><b>ZAPRATITE NAS</b></p>
+      <p><b>{{"FOOTER.follow" | translate}}</b></p>
       <div class="d-flex">
         <a
           href="https://www.facebook.com/la.pista.100"
