--- a/src/app/core/components/home-four-images/home-four-images.component.html
+++ b/src/app/core/components/home-four-images/home-four-images.component.html
@@ -14,22 +14,17 @@
         <b>Lapista universe</b>
       </p>
       <p style="font-size: 14px; letter-spacing: 1.5px; max-width: 800px;">
-        Novi koncept mode, protumačen kroz ekskluzivnost naših modela. Svaka
-        nova kolekcija predstavlja estetsko putovanje kroz vijugave linije,
-        potpetice, boje i ekskluzivne materijale. Cipela Lapista nije samo
-        dodatak za nošenje, već manifestacija osećaja koji treba videti i
-        dodirnuti.
+        {{"HOME.universeText" | translate}}
         <br />
         <b style="font-size: 16px;"
-          >Posebnoj ženi je potrebna posebna cipela. <br />
-          Postanite deo našeg sveta.
+          >{{"HOME.universeTextBold" | translate}}
         </b>
       </p>
       <button
         [routerLink]="'/about'"
         class="mb-5"
         style="border-radius: 0px;border: 1px solid black;height: 40px;padding: 5px 25px;background: transparent;outline: none;">
-        Više o nama
+        {{"HOME.universeMore" | translate}}
       </button>
     </div>
   </div>
@@ -43,11 +38,10 @@
       <p
         style="font-size: 22px; text-transform: uppercase; letter-spacing: 2px;"
       >
-        <b>POSTANITE DEO NAŠEG SVETA.</b>
+        <b>{{"HOME.ourWorldHeading" | translate}}</b>
       </p>
       <p style="font-size: 14px; letter-spacing: 1px; line-height: 28px;">
-        Luksuzno ručno izrađene kreacije, ponosno napravljene u Italiji, spremne
-        da vašoj odeći daju dodir glamura čineći vaš stil jedinstvenim.
+        {{"HOME.ourWorld" | translate}}
       </p>
     </div>
   </div>
@@ -62,7 +56,7 @@
         class="img-fluid position-relative one-four-image"
       />
       <div class="image-overlay">
-        <p>Cipele</p>
+        <p>{{"HOME.FOURIMAGES.shoes" | translate}}</p>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/sandals'">
@@ -72,7 +66,7 @@
         class="img-fluid position-relative one-four-image"
       />
       <div class="image-overlay">
-        <p>Sandale</p>
+        <p>{{"HOME.FOURIMAGES.sandals" | translate}}</p>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/boots'">
@@ -82,7 +76,7 @@
         class="img-fluid position-relative one-four-image"
       />
       <div class="image-overlay">
-        <p>Čizme</p>
+        <p>{{"HOME.FOURIMAGES.boots" | translate}}</p>
       </div>
     </div>
     <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/bags'">
@@ -93,7 +87,7 @@
         [routerLink]="'/products'"
       />
       <div class="image-overlay">
-        <p>Torbe</p>
+        <p>{{"HOME.FOURIMAGES.bags" | translate}}</p>
       </div>
     </div>
   </div>
