--- a/src/app/core/components/order-form/order-form.component.html
+++ b/src/app/core/components/order-form/order-form.component.html
@@ -2,14 +2,14 @@
   class="container-fluid d-flex flex-column align-items-center justify-content-center mt-5"
 >
   <div class="container text-center">
-    <h2 class="my-4">Popunite formu za porucivanje</h2>
+    <h2 class="my-4">{{ 'ORDERFORM.fillForm' | translate }}</h2>
   </div>
   <div class="container">
     <form class="order-form" [formGroup]="sendOrderForm">
       <div class="d-flex flex-wrap">
         <div class="col-lg-6 flex-grow-1">
           <mat-form-field appearance="outline" class="example-full-width">
-            <mat-label>Ime</mat-label>
+            <mat-label>{{ 'ORDERFORM.name' | translate }}</mat-label>
             <input formControlName="firstName"
                    matInput
                    placeholder="Ime" />
@@ -17,7 +17,7 @@
         </div>
         <div class="col-lg-6 flex-grow-1">
           <mat-form-field appearance="outline" class="example-full-width">
-            <mat-label>Prezime</mat-label>
+            <mat-label>{{ 'ORDERFORM.lastName' | translate }}</mat-label>
             <input matInput
                    formControlName="lastName"
                    placeholder="Prezime" />
@@ -33,7 +33,7 @@
         </div>
         <div class="col-lg-6 flex-grow-1">
           <mat-form-field appearance="outline" class="example-full-width">
-            <mat-label>Telefon</mat-label>
+            <mat-label>{{ 'ORDERFORM.phone' | translate }}</mat-label>
             <input mask="000-00-00-000" formControlName="phone" matInput placeholder="Telefon" />
           </mat-form-field>
         </div>
@@ -41,20 +41,20 @@
       <div class="d-flex flex-wrap">
         <div class="col-lg-6 flex-grow-1">
           <mat-form-field appearance="outline" class="example-full-width">
-            <mat-label>Grad</mat-label>
+            <mat-label>{{ 'ORDERFORM.city' | translate }}</mat-label>
             <input formControlName="city" matInput placeholder="Grad" />
           </mat-form-field>
         </div>
         <div class="col-lg-6 flex-grow-1 d-flex">
           <div class="col-9 p-0 pr-3">
             <mat-form-field appearance="outline" class="example-full-width">
-              <mat-label>Adresa</mat-label>
+              <mat-label>{{ 'ORDERFORM.address' | translate }}</mat-label>
               <input formControlName="address" matInput placeholder="Adresa" />
             </mat-form-field>
           </div>
           <div class="col-3 p-0">
             <mat-form-field appearance="outline" class="example-full-width">
-              <mat-label>Broj</mat-label>
+              <mat-label>{{ 'ORDERFORM.addressUnit' | translate }}</mat-label>
               <input formControlName="addressUnit" matInput placeholder="Broj" />
             </mat-form-field>
           </div>
@@ -63,7 +63,7 @@
       <div class="d-flex flex-wrap">
         <div class="col-lg-12">
           <mat-form-field appearance="outline" class="example-full-width">
-            <mat-label>Napomena</mat-label>
+            <mat-label>{{ 'ORDERFORM.note' | translate }}</mat-label>
             <input formControlName="note" matInput placeholder="Napomena" />
           </mat-form-field>
         </div>
@@ -74,7 +74,7 @@
     <button class="btn btn-success w-100 cart-order-button"
             [disabled]="!sendOrderForm.valid"
             (click)="sendFormData()">
-      <b class="text-uppercase">Poruči</b>
+      <b class="text-uppercase">{{ 'ORDERFORM.send' | translate }}</b>
     </button>
   </div>
 </div>
