--- a/src/app/modules/contact/pages/contact.component.html
+++ b/src/app/modules/contact/pages/contact.component.html
@@ -11,7 +11,7 @@
     <div class="col-lg-12 d-flex flex-wrap">
       <div class="col-lg-3 col-md-6 d-flex justify-content-center">
        <div class="d-flex flex-column">
-         <p><b>TELEFON</b></p>
+         <p><b>{{'CONTACT.phone'|translate}}</b></p>
          <a href="tel:+381638105618" mask="(000)00 000 00 00">+381 63 810 56 18</a>
        </div>
       </div>
@@ -23,15 +23,15 @@
       </div>
       <div class="col-lg-3 col-md-12 d-flex justify-content-center">
         <div class="d-flex flex-column">
-          <p><b>ADRESA</b></p>
+          <p><b>{{'CONTACT.address'|translate}}</b></p>
           <p style="font-size: 14px"><b>Djordja Stanojevića 11dj , lokal 3</b></p>
           <p style="font-size: 12px">Zgrada Jorgovan , Belville</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-12 d-flex justify-content-center">
         <div class="d-flex flex-column">
-          <p><b>PIŠITE NAM</b></p>
-          <p style="font-size: 12px">Cilj nam je da odgovorimo u roku od 24 sata, međutim, tokom zauzetih perioda poput praznika, rasprodaja i posebnih kampanja, možda će potrajati malo duže.</p>
+          <p><b>{{'CONTACT.writeUs'|translate}}</b></p>
+          <p style="font-size: 12px">{{'CONTACT.writeUsText'|translate}}</p>
         </div>
       </div>
     </div>
