--- a/src/app/modules/about/pages/about.component.html
+++ b/src/app/modules/about/pages/about.component.html
@@ -1,39 +1,23 @@
 <div class="container-fluid">
   <div class="container my-5">
-    <h3 class="mb-2">NAŠA PRIČA</h3>
-    <p class="mb-3"><b>GDE VAS MOŽE VODITI STRAST?</b></p>
+    <h3 class="mb-2">{{'ABOUT.ourStory' | translate}}</h3>
+    <p class="mb-3"><b>{{'ABOUT.passion' | translate}}</b></p>
 
     <p style="font-size: 16px; line-height: 32px;">
-      Naš cilj je da želje skrivene u srcu svake žene pretvorimo u stvarnost,a to je ono što svaku od naših cipela cini jedinstvenim stilskim iskustvom.
-      Od 2010 godine ova strast je postala lajtmotiv Italijanske kompanije IDENTITÀ,dajući iskren i strastven doprinos svetu mode.
-      Idelana i umetnicka avangarda ne odriče se tradicionalno ručno izrađene proizvodnje gde je svaki pojedinačni završetak isključivo ručno opšiven.
+      {{'ABOUT.ourTarget' | translate}}
       <br/>
       <br/>
-      Opsesivna potraga za materijalima,precizan i tačan izbor modela čine ovu kompaniju jedinstvenom na svetskom tržištu.
-      Fascinirani kvalitetom i modelima,koji su rangu velikih modnih kuća,odlučili smo da brend IDENTITÀ pretstavimo i u Srbiji.
+      {{'ABOUT.ourTarget2' | translate}}
       <br/>
       <br/>
-      <b>“POSETI NAS I IZRAZI SVOJ IDENTITET”</b>
+      <b>{{'ABOUT.slogan1' | translate}}</b>
       <br/>
       <br/>
-      U našem maloprodajnom objektu ”LA PISTA”  u ulici Đorđa Stanojevića 11đ lokal 3 (zgrada Jorgovan) BELLVILE,Beograd ili poručite online.
-      Pakete pripremljene sa najvećom pažnjom,sertifikatom o autentičnosti,oznakom porekla materijala,vrećicom za prašinu i kutijom,šaljemo u roku 24h na teritoriji Srbije.
+      {{'ABOUT.ourObject' | translate}}
       <br/>
       <br/>
-      <b>“BUDI ŽENA SA IDENTITETOM”</b>
+      <b>{{'ABOUT.slogan2' | translate}}</b>
       <br/>
-<!--      <br/>-->
-<!--      The box is branded with the logo of the Maison, our shipping is always-->
-<!--      EXPRESS, 24 working hours for Italy and 2/ 4 working days for any other-->
-<!--      country in the world.-->
-<!--      <br/>-->
-<!--      <br/>-->
-<!--      Identità S.R.L. has many more additional service and options both online-->
-<!--      and offline like the ÉLITE program and the Flash Sales.-->
-<!--      <br/>-->
-<!--      <br/>-->
-<!--      Chic, glamour, bon ton, pop, soft,luxury, the brand style is charming and-->
-<!--      it will be charming in every single creation.-->
     </p>
   </div>
 </div>
