[fixed modals for add / update] * fixed method for update/add sizes/heels * fixed form validators

--- a/src/app/modules/admin/pages/admin.component.html
+++ b/src/app/modules/admin/pages/admin.component.html
@@ -225,7 +225,7 @@
               <button type="button" class="btn btn-info" (click)="openEditModal('heel' , s.id)">Edit</button>
             </td>
             <td class="delete-td">
-              <button type="button" class="btn btn-danger" (click)="deleteItem('size' , s.id)">Delete</button>
+              <button type="button" class="btn btn-danger" (click)="deleteItem('heel' , s.id)">Delete</button>
             </td>
           </tr>
           </tbody>
