[local images] * added images on hosting

--- a/src/app/core/components/product-detail-image/product-detail-image.component.html
+++ b/src/app/core/components/product-detail-image/product-detail-image.component.html
@@ -1,5 +1,5 @@
 <img
-  [src]="detailImage"
+  src="../../../../assets/img/items/{{detailImage}}"
   alt=""
   style="height: 300px; width: 300px; object-fit: cover;"
 />
