--- a/src/app/modules/products/pages/products.component.html
+++ b/src/app/modules/products/pages/products.component.html
@@ -4,7 +4,7 @@
 
       <!-- ZA GRUPNI PRIKAZ /products -->
       <div class="prod-item text-center" *ngIf="!parametar">
-        <img src="{{product?.colors[0]?.image}}" alt="" class="img-fluid" [routerLink]="'/product/' + product.id"
+        <img src="../../../../assets/img/items/{{product?.colors[0]?.image}}" alt="" class="img-fluid" [routerLink]="'/product/' + product.id"
              style="cursor: pointer">
         <p><b>{{product?.name.toUpperCase()}}</b></p>
         <p [ngStyle]="{'text-decoration': product?.sale != 0 ? 'line-through' : 'none'}">{{product?.price}} RSD</p>
@@ -16,7 +16,7 @@
 
       <!-- ZA PTIKAZ SVIH SA BOJAMA /products/${param} -->
       <div class="prod-item text-center">
-        <img src="{{product?.image}}" alt="" class="img-fluid" [routerLink]="'/product/' + product?.item?.id" style="cursor: pointer">
+        <img src="../../../../assets/img/items/{{product?.image}}" alt="" class="img-fluid" [routerLink]="'/product/' + product?.item?.id" style="cursor: pointer">
         <p><b>{{product?.item?.name.toUpperCase()}}</b></p>
 <!--        <p>{{product?.item?.price}} RSD</p>-->
         <!-- new -->
