[mobile toolbar fix,added lang,contact page fix] * added language select option for mobile devices * fixed style and typo in contact * fixed contact map scroll on desktop

--- a/src/app/core/components/home-three-images/home-three-images.component.html
+++ b/src/app/core/components/home-three-images/home-three-images.component.html
@@ -11,7 +11,7 @@
               background: transparent;
               outline: none"
               [routerLink]="'/products/all'">
-        <b class="text-uppercase">Naša ponuda</b>
+        <b class="text-uppercase">{{'HOME.ourShop' | translate}}</b>
       </button>
     </div>
   </div>
