--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -22,16 +22,36 @@
        </div>
       </div>
     </div>
-
-    <div class="d-flex" style="width: 20px;" *ngIf="innerWidth <= 768">
+    <!--  Back route if lower than 768px -->
+    <div class="d-flex"  *ngIf="innerWidth <= 768">
       <img
         src="assets/img/left-chevron.svg"
         (click)="goBack()"
         *ngIf="ruta !== '/'"
         alt="lapista go back"
-        style="max-height: 20px; min-height: 15px;"
+        style="max-height: 20px; min-height: 15px;width: 20px;"
       />
     </div>
+
+    <div *ngIf="ruta == '/' && innerWidth < 769" class="position-relative"><!-- Lang-->
+      <div class="d-flex position-relative align-items-center"
+           (click)="showLanguages()">
+        <img class="img-fluid" [src]="selectedLanguage.img" alt="" style="max-height: 24px">
+      </div>
+      <div class="d-flex position-absolute lang-container" *ngIf="languageMenu"
+      style="width: 40px;left: -10px;">
+        <div class="d-flex flex-column lang-content" >
+          <div class="d-flex justify-content-between lang-item" *ngFor="let l of languages"
+               style="cursor: pointer"
+               (click)="setLanguage(l)">
+            <!--          <p >{{l.name}}</p>-->
+            <img class="img-fluid" [src]="l.img" alt="" style="max-height: 24px">
+          </div>
+        </div>
+      </div>
+    </div><!-- Lang-->
+
+    <!--Logo-->
     <div
       class="toolbar-logo d-flex justify-content-center col-lg-6"
       [routerLink]="'/'"
