--- a/src/app/core/components/toolbar/toolbar.component.scss
+++ b/src/app/core/components/toolbar/toolbar.component.scss
@@ -83,6 +83,6 @@ p.selected-language {
 @media screen and (max-width: 500px) {
   .toolbar-top {
     padding: 0 !important;
-    margin: 0 10px !important;
+    margin: 0 !important;
   }
 }
