--- a/src/app/modules/contact/pages/contact.component.html
+++ b/src/app/modules/contact/pages/contact.component.html
@@ -1,7 +1,7 @@
 <!-- this creates a google map on the page with the given lat/lng from -->
 <!-- the component as the initial center of the map: -->
 <div class="my-3">
-  <agm-map [latitude]="lat" [longitude]="lng" [zoom]="16">
+  <agm-map [latitude]="lat" [longitude]="lng" [zoom]="16" [scrollwheel]="false">
     <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
   </agm-map>
 </div>
@@ -10,28 +10,28 @@
   <div class="container">
     <div class="col-lg-12 d-flex flex-wrap">
       <div class="col-lg-3 col-md-6 d-flex justify-content-center">
-       <div class="d-flex flex-column">
-         <p><b>{{'CONTACT.phone'|translate}}</b></p>
+       <div class="d-flex flex-column mobile-center">
+         <p class="box-heading"><b>{{'CONTACT.phone'|translate}}</b></p>
          <a href="tel:+381638105618" mask="(000)00 000 00 00">+381 63 810 56 18</a>
        </div>
       </div>
       <div class="col-lg-3 col-md-6 d-flex justify-content-center">
-        <div class="d-flex flex-column">
-          <p><b>WHATSAPP</b></p>
+        <div class="d-flex flex-column mobile-center">
+          <p class="box-heading"><b>WHATSAPP</b></p>
           <a href="tel:+381638105618">+381 63 810 56 18</a>
         </div>
       </div>
       <div class="col-lg-3 col-md-12 d-flex justify-content-center">
-        <div class="d-flex flex-column">
-          <p><b>{{'CONTACT.address'|translate}}</b></p>
-          <p style="font-size: 14px"><b>Djordja Stanojevića 11dj , lokal 3</b></p>
-          <p style="font-size: 12px">Zgrada Jorgovan , Belville</p>
+        <div class="d-flex flex-column mobile-center">
+          <p class="box-heading"><b>{{'CONTACT.address'|translate}}</b></p>
+          <p style="font-size: 14px" class="m-0"><b>Djordja Stanojevića 11dj , lokal 3</b></p>
+          <p style="font-size: 14px" class="m-0">Zgrada Jorgovan , Belville</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-12 d-flex justify-content-center">
-        <div class="d-flex flex-column">
-          <p><b>{{'CONTACT.writeUs'|translate}}</b></p>
-          <p style="font-size: 12px">{{'CONTACT.writeUsText'|translate}}</p>
+        <div class="d-flex flex-column mobile-center">
+          <p class="box-heading"><b>{{'CONTACT.writeUs'|translate}}</b></p>
+          <p style="font-size: 13px">{{'CONTACT.writeUsText'|translate}}</p>
         </div>
       </div>
     </div>
