--- a/src/app/modules/contact/pages/contact.component.scss
+++ b/src/app/modules/contact/pages/contact.component.scss
@@ -1,14 +1,17 @@
-//.col-lg-4.col-md-6 {
-//  padding-top: 15px;
-//  a {
-//    font-size: 12px;
-//  }
-//}
-//
-//.col-lg-4:nth-of-type(2) {
-//  border-left: 10px solid #F4F4F4;
-//  border-right: 10px solid #F4F4F4;
-//}
 agm-map {
   height: 360px;
+}
+.box-heading {
+  text-transform: uppercase;
+}
+
+@media screen and (max-width: 768px) {
+  .mobile-center {
+    text-align: center;
+
+    .box-heading {
+      margin-bottom: 6px;
+      margin-top: 12px;
+    }
+  }
 }
