--- a/src/app/modules/contact/pages/contact.component.html
+++ b/src/app/modules/contact/pages/contact.component.html
@@ -12,13 +12,13 @@
       <div class="col-lg-3 col-md-6 d-flex justify-content-center">
        <div class="d-flex flex-column mobile-center">
          <p class="box-heading"><b>{{'CONTACT.phone'|translate}}</b></p>
-         <a href="tel:+381638105618" mask="(000)00 000 00 00">+381 63 810 56 18</a>
+         <a href="tel:+38166369569" mask="(000)00 000 00 00">+381 66 369 569</a>
        </div>
       </div>
       <div class="col-lg-3 col-md-6 d-flex justify-content-center">
         <div class="d-flex flex-column mobile-center">
           <p class="box-heading"><b>WHATSAPP</b></p>
-          <a href="tel:+381638105618">+381 63 810 56 18</a>
+          <a href="tel:+38166369569">+381 66 369 569</a>
         </div>
       </div>
       <div class="col-lg-3 col-md-12 d-flex justify-content-center">
