--- a/src/app/core/components/sale-modal/sale-modal.component.html
+++ b/src/app/core/components/sale-modal/sale-modal.component.html
@@ -11,8 +11,7 @@
                 <img src="https://en.identitashoes.com/imgnewsletter.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-6 sale-text p-3 d-flex flex-column justify-content-center align-items-center text-center">
-                <h3>SNIZENJE 10%</h3>
-                <p>Svaki artikal na snizenju 10% do ponedeljka 22.03.2021</p>
+                <h3>Samo ONLINE dodatnih -10% popusta na sve</h3>
             </div>
         </div>
     </div>
