--- a/src/app/core/components/size-table-modal/size-table-modal.component.html
+++ b/src/app/core/components/size-table-modal/size-table-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title">Tablica velicina</h4>
+    <h4 class="modal-title">{{'ITEMDETAIL.sizeChart'|translate}}</h4>
     <button type="button" class="close" aria-label="Close" (click)="closeModal()">
         <span aria-hidden="true">&times;</span>
     </button>
