-Sale, og tags - Sale 30% identita - Og tags face , viber ,...

--- a/src/app/core/components/home-three-images/home-three-images.component.html
+++ b/src/app/core/components/home-three-images/home-three-images.component.html
@@ -1,8 +1,6 @@
 <div class="container-fluid">
   <div class="container">
     <div class="d-flex flex-column align-items-center py-3 my-3">
-<!--      <h3 class="text-center"><b>NOVA KOLEKCIJA JESEN / ZIMA 2021</b></h3>-->
-<!--      <p>Kupite sada novu kolekciju jesen / zima 2021!</p>-->
       <button class="mt-2"
               style="border-radius: 0px;
               border: 1px solid black;
@@ -21,13 +19,13 @@
   <div class="row">
     <div class="col-12 d-flex flex-wrap">
       <div class="col-lg-4 one-of-three">
-        <img src="https://en.identitashoes.com/m/tel/IMGHOMEBORSE.jpg" alt="" class="img-fluid" [routerLink]="'/products/bags'">
+        <img src="https://identitashoes.com/1home.png" alt="" class="img-fluid" [routerLink]="'/products/bags'">
       </div>
       <div class="col-lg-4 one-of-three">
         <img src="https://en.identitashoes.com/m/tel/IMGHOMESTIVALETTI.jpg" alt="" class="img-fluid" [routerLink]="'/products/pumps'">
       </div>
       <div class="col-lg-4 one-of-three">
-        <img src="https://en.identitashoes.com/m/tel/IMGHOMENA.jpg" alt="" class="img-fluid" [routerLink]="'/products/sandals'">
+        <img src="https://identitashoes.com/2home.png" alt="" class="img-fluid" [routerLink]="'/products/sandals'">
       </div>
     </div>
   </div>
