--- a/src/app/core/components/sale-modal/sale-modal.component.html
+++ b/src/app/core/components/sale-modal/sale-modal.component.html
@@ -8,10 +8,10 @@
     <div class="row m-0">
         <div class="col-12 p-0 d-flex">
             <div class="col-6 p-0">
-                <img src="https://en.identitashoes.com/imgnewsletter.jpg" alt="" class="img-fluid">
+                <img src="https://it.identitashoes.com/m/detail/imghomedetail8.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-6 sale-text p-3 d-flex flex-column justify-content-center align-items-center text-center">
-                <h3>Samo ONLINE dodatnih -10% popusta na sve</h3>
+                <h3>30% POPUST NA SVE IDENTITA MODELE</h3>
             </div>
         </div>
     </div>
